--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "src/styles.scss"
             ],
             "scripts": []
