--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": []
