--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
+    "until": "^0.1.1",
+    "util": "^0.12.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
