--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-slick-carousel": "^0.5.1",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "until": "^0.1.1",
     "util": "^0.12.4",
