--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,8 @@
               "node_modules/font-awesome/css/font-awesome.css",
               "./node_modules/slick-carousel/slick/slick.css",
               "./node_modules/slick-carousel/slick/slick-theme.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/ngx-lightbox/lightbox.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
