--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "country-state-city": "^3.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-lightbox": "^2.5.2",
     "ngx-slick-carousel": "^0.5.1",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
@@ -36,6 +38,7 @@
     "@angular-devkit/build-angular": "^13.3.0",
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
