--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "country-state-city": "^3.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ng-lazyload-image": "^9.1.3",
     "ngx-bootstrap": "^8.0.0",
     "ngx-lightbox": "^2.5.2",
     "ngx-slick-carousel": "^0.5.1",
